# SnakeSpace

./: .coveragerc  AUTHORS.rst  README.md  README.rst  setup.cfg  setup.py
.github/workflows/: pypi.yml
docs/: Makefile  conf.py  index.rst
src/snakespace/: __init__.py  snakespace.py
src/snakestring/: skeleton.py
tests/: test_skeleton.py
